# PX4-Mujoco-ros2

./: .gitignore  Makefile  README.md  bridge.py  frames.py  requirements.txt
UAV/: UAV.xml  UAV_Delta.xml  scene.xml  scene_uav_delta.xml
UAV/Delta/: Delta.xml  scene.xml
UAV/Helipad/: UAV_Delta_Manipulator - Helipad-1.STL
UAV/UAV/: UAV - 11000mAh_battery-1.STL  UAV - 7NANO-1.STL  UAV - 7Nano_Base-1.STL  UAV - Cushion_PCB-1.STL  UAV - Cushion_PCB-2.STL  UAV - Cushion_PCB-3.STL  UAV - Cushion_PCB-4.STL  UAV - D5L10Alsupport-1.STL  UAV - D5L10Alsupport-10.STL  UAV - D5L10Alsupport-11.STL  UAV - D5L10Alsupport-12.STL  UAV - D5L10Alsupport-13.STL  UAV - D5L10Alsupport-14.STL  UAV - D5L10Alsupport-15.STL  UAV - D5L10Alsupport-16.STL  (+56 more)
configs/: project.env.example
docs/: README.md  architecture.md  current_status.md  model_contract.md  scenarios.md
ros2_ws/src/px4_mujoco_ros2_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/px4_mujoco_ros2_bringup/launch/: hover_test.launch.py  offboard_control.launch.py  offboard_hover_test.launch.py  offboard_waypoint_cruise.launch.py  waypoint_cruise.launch.py
ros2_ws/src/px4_mujoco_ros2_control/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/px4_mujoco_ros2_control/launch/: offboard_control.launch.py
ros2_ws/src/px4_mujoco_ros2_control/px4_mujoco_ros2_control/: __init__.py  command_inputs.py  offboard_control.py  offboard_hold.py  offboard_node.py  px4_interface.py  setpoint_types.py  vehicle_state.py
ros2_ws/src/uav_control/: ADDING_FEATURES.md  README.md  package.xml  setup.py
ros2_ws/src/uav_control/uav_control/: hover_test.py  waypoint_cruise.py
scripts/: apply_px4_patch.sh  bootstrap_workspace.sh  build_px4.sh  build_ros2.sh  common.sh  doctor.py  install_ubuntu_deps.sh  run_bridge.sh  run_hover_test.sh  run_offboard_control.sh  run_offboard_hold.sh  run_px4.sh  run_qgc.sh  run_ros2_agent.sh  run_stack.sh  run_stack_delta.sh  run_stack_ros2.sh  run_stack_ros2_delta.sh  run_stack_ros2_uav.sh  run_stack_uav.sh  run_waypoint_cruise.sh  stop_px4.sh
(+44 files in other folders)
