<?xml version="1.0"?>
<package format="3">
  <name>px4_mujoco_ros2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the PX4 MuJoCo ROS 2 stack.</description>
  <maintainer email="user@example.com">PX4 MuJoCo ROS2 Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>px4_mujoco_ros2_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
