<?xml version="1.0"?>
<package format="3">
  <name>px4_mujoco_ros2_control</name>
  <version>0.1.0</version>
  <description>ROS 2 offboard control helpers for the PX4 MuJoCo simulation stack.</description>
  <maintainer email="user@example.com">PX4 MuJoCo ROS2 Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
