<?xml version="1.0"?>
<package format="3">
  <name>uav_control</name>
  <version>0.1.0</version>
  <description>Generic UAV control, planning, and test nodes for the PX4 MuJoCo ROS 2 stack.</description>
  <maintainer email="user@example.com">PX4 MuJoCo ROS2 Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
